# citadel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  citadel.db  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: lint.yaml  publish.yml
citadel/: globals.py  main.py  models.py  utils.py
citadel/commands/: __init__.py  generate.py  hello.py  notes.py  quiz.py
citadel/templates/messages/: NOTES-CONFIRMATION-EDITOR.md  NOTES-CONFIRMATION.md  QUIZ-OVERVIEW.md  QUIZ-PLAYERS.md  QUIZ-QUESTION.md  QUIZ-RESULTS.md
citadel/templates/prompts/: EDITOR-CONFIRM.md  NOTES.md  QUIZ.md
